Update module imports to use the new package name

--- a/examples/directivity.ipynb
+++ b/examples/directivity.ipynb
@@ -29,7 +29,7 @@
      "input": [
       "%matplotlib inline\n",
       "import matplotlib.pyplot as plt\n",
-      "from acoustics.directivity import *"
+      "from acoustic_toolbox.directivity import *"
      ],
      "language": "python",
      "metadata": {},
