--- a/examples/signal_class.ipynb
+++ b/examples/signal_class.ipynb
@@ -535,7 +535,7 @@
     }
    ],
    "source": [
-    "from acoustics.standards.iec_61672_1_2013 import WEIGHTING_VALUES\n",
+    "from acoustic_toolbox.standards.iec_61672_1_2013 import WEIGHTING_VALUES\n",
     "WEIGHTING_VALUES['A']"
    ]
   },
@@ -565,7 +565,7 @@
     }
    ],
    "source": [
-    "from acoustics.decibel import dbsum\n",
+    "from acoustic_toolbox.decibel import dbsum\n",
     "dbsum( s.third_octaves()[1] + WEIGHTING_VALUES['A'] )"
    ]
   },
