Update module imports to use the new package name

--- a/examples/signal_class.ipynb
+++ b/examples/signal_class.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "from acoustics import Signal\n",
+    "from acoustic_toolbox import Signal\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
     "from IPython.display import Audio\n",
