include example notebooks in docs

--- a/docs/examples/signal_class.ipynb
+++ b/docs/examples/signal_class.ipynb
@@ -25,9 +25,9 @@
    "source": [
     "from acoustic_toolbox import Signal\n",
     "import numpy as np\n",
+    "\n",
     "%matplotlib inline\n",
-    "from IPython.display import Audio\n",
-    "import seaborn as sns # seaborn for prettier graphs"
+    "from IPython.display import Audio"
    ]
   },
   {
@@ -64,7 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "s = Signal.from_wav('../data/recording.wav')"
+    "s = Signal.from_wav(\"../data/recording.wav\")"
    ]
   },
   {
@@ -413,7 +413,7 @@
     }
    ],
    "source": [
-    "s.weigh('A')"
+    "s.weigh(\"A\")"
    ]
   },
   {
@@ -442,7 +442,7 @@
     }
    ],
    "source": [
-    "fig = s.weigh('A').plot_octaves()"
+    "fig = s.weigh(\"A\").plot_octaves()"
    ]
   },
   {
@@ -474,7 +474,7 @@
     }
    ],
    "source": [
-    "s.weigh('A').leq()"
+    "s.weigh(\"A\").leq()"
    ]
   },
   {
@@ -536,7 +536,8 @@
    ],
    "source": [
     "from acoustic_toolbox.standards.iec_61672_1_2013 import WEIGHTING_VALUES\n",
-    "WEIGHTING_VALUES['A']"
+    "\n",
+    "WEIGHTING_VALUES[\"A\"]"
    ]
   },
   {
@@ -566,7 +567,8 @@
    ],
    "source": [
     "from acoustic_toolbox.decibel import dbsum\n",
-    "dbsum( s.third_octaves()[1] + WEIGHTING_VALUES['A'] )"
+    "\n",
+    "dbsum(s.third_octaves()[1] + WEIGHTING_VALUES[\"A\"])"
    ]
   },
   {
@@ -586,7 +588,7 @@
    },
    "outputs": [],
    "source": [
-    "s2 = Signal([s,s,s], s.fs)"
+    "s2 = Signal([s, s, s], s.fs)"
    ]
   },
   {
@@ -644,7 +646,7 @@
     }
    ],
    "source": [
-    "fig = s2.weigh('A').plot_third_octaves()"
+    "fig = s2.weigh(\"A\").plot_third_octaves()"
    ]
   },
   {
