--- a/docs/examples/directivity_example.ipynb
+++ b/docs/examples/directivity_example.ipynb
@@ -66,7 +66,7 @@
    ],
    "source": [
     "d = Omni()\n",
-    "fig = plot(d)\n"
+    "fig = plot(d)"
    ]
   },
   {
@@ -148,7 +148,7 @@
    ],
    "source": [
     "d = FigureEight()\n",
-    "fig = plot(d)\n"
+    "fig = plot(d)"
    ]
   },
   {
