type hint signal.py

--- a/docs/examples/signal_class.ipynb
+++ b/docs/examples/signal_class.ipynb
@@ -17,9 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:38:59.552535Z",
+     "iopub.status.busy": "2025-02-19T02:38:59.552143Z",
+     "iopub.status.idle": "2025-02-19T02:39:00.936463Z",
+     "shell.execute_reply": "2025-02-19T02:39:00.936126Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -40,9 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:00.938151Z",
+     "iopub.status.busy": "2025-02-19T02:39:00.938056Z",
+     "iopub.status.idle": "2025-02-19T02:39:00.940332Z",
+     "shell.execute_reply": "2025-02-19T02:39:00.940126Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -58,9 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:00.941456Z",
+     "iopub.status.busy": "2025-02-19T02:39:00.941377Z",
+     "iopub.status.idle": "2025-02-19T02:39:00.951406Z",
+     "shell.execute_reply": "2025-02-19T02:39:00.951159Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -78,9 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:00.952523Z",
+     "iopub.status.busy": "2025-02-19T02:39:00.952443Z",
+     "iopub.status.idle": "2025-02-19T02:39:00.954441Z",
+     "shell.execute_reply": "2025-02-19T02:39:00.954237Z"
+    }
    },
    "outputs": [
     {
@@ -89,7 +113,7 @@
        "44100"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,9 +131,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:00.971444Z",
+     "iopub.status.busy": "2025-02-19T02:39:00.971359Z",
+     "iopub.status.idle": "2025-02-19T02:39:00.973030Z",
+     "shell.execute_reply": "2025-02-19T02:39:00.972834Z"
+    }
    },
    "outputs": [
     {
@@ -118,7 +148,7 @@
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,9 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:00.974088Z",
+     "iopub.status.busy": "2025-02-19T02:39:00.974028Z",
+     "iopub.status.idle": "2025-02-19T02:39:00.975912Z",
+     "shell.execute_reply": "2025-02-19T02:39:00.975702Z"
+    }
    },
    "outputs": [
     {
@@ -147,7 +183,7 @@
        "1185408"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,9 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:00.976946Z",
+     "iopub.status.busy": "2025-02-19T02:39:00.976884Z",
+     "iopub.status.idle": "2025-02-19T02:39:01.000851Z",
+     "shell.execute_reply": "2025-02-19T02:39:01.000583Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -186,7 +228,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +257,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:01.018415Z",
+     "iopub.status.busy": "2025-02-19T02:39:01.018308Z",
+     "iopub.status.idle": "2025-02-19T02:39:01.056747Z",
+     "shell.execute_reply": "2025-02-19T02:39:01.056512Z"
+    }
    },
    "outputs": [
     {
@@ -247,7 +295,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:01.057898Z",
+     "iopub.status.busy": "2025-02-19T02:39:01.057827Z",
+     "iopub.status.idle": "2025-02-19T02:39:01.361700Z",
+     "shell.execute_reply": "2025-02-19T02:39:01.361483Z"
+    }
    },
    "outputs": [
     {
@@ -276,7 +330,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:01.362897Z",
+     "iopub.status.busy": "2025-02-19T02:39:01.362805Z",
+     "iopub.status.idle": "2025-02-19T02:39:01.468330Z",
+     "shell.execute_reply": "2025-02-19T02:39:01.468018Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -297,7 +357,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:01.469922Z",
+     "iopub.status.busy": "2025-02-19T02:39:01.469840Z",
+     "iopub.status.idle": "2025-02-19T02:39:01.516506Z",
+     "shell.execute_reply": "2025-02-19T02:39:01.516231Z"
+    }
    },
    "outputs": [
     {
@@ -328,7 +394,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:01.517861Z",
+     "iopub.status.busy": "2025-02-19T02:39:01.517786Z",
+     "iopub.status.idle": "2025-02-19T02:39:01.774712Z",
+     "shell.execute_reply": "2025-02-19T02:39:01.774458Z"
+    }
    },
    "outputs": [
     {
@@ -364,7 +436,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:01.775987Z",
+     "iopub.status.busy": "2025-02-19T02:39:01.775913Z",
+     "iopub.status.idle": "2025-02-19T02:39:02.390306Z",
+     "shell.execute_reply": "2025-02-19T02:39:02.390022Z"
+    }
    },
    "outputs": [
     {
@@ -395,7 +473,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:02.391581Z",
+     "iopub.status.busy": "2025-02-19T02:39:02.391508Z",
+     "iopub.status.idle": "2025-02-19T02:39:02.406525Z",
+     "shell.execute_reply": "2025-02-19T02:39:02.406321Z"
+    }
    },
    "outputs": [
     {
@@ -425,7 +509,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:02.407685Z",
+     "iopub.status.busy": "2025-02-19T02:39:02.407601Z",
+     "iopub.status.idle": "2025-02-19T02:39:02.643859Z",
+     "shell.execute_reply": "2025-02-19T02:39:02.643586Z"
+    }
    },
    "outputs": [
     {
@@ -464,7 +554,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:02.645075Z",
+     "iopub.status.busy": "2025-02-19T02:39:02.645001Z",
+     "iopub.status.idle": "2025-02-19T02:39:02.661508Z",
+     "shell.execute_reply": "2025-02-19T02:39:02.661285Z"
+    }
    },
    "outputs": [
     {
@@ -493,7 +589,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:02.662738Z",
+     "iopub.status.busy": "2025-02-19T02:39:02.662658Z",
+     "iopub.status.idle": "2025-02-19T02:39:02.665544Z",
+     "shell.execute_reply": "2025-02-19T02:39:02.665275Z"
+    }
    },
    "outputs": [
     {
@@ -522,7 +624,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:02.666613Z",
+     "iopub.status.busy": "2025-02-19T02:39:02.666539Z",
+     "iopub.status.idle": "2025-02-19T02:39:02.668507Z",
+     "shell.execute_reply": "2025-02-19T02:39:02.668282Z"
+    }
    },
    "outputs": [
     {
@@ -556,7 +664,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:02.669604Z",
+     "iopub.status.busy": "2025-02-19T02:39:02.669537Z",
+     "iopub.status.idle": "2025-02-19T02:39:03.091256Z",
+     "shell.execute_reply": "2025-02-19T02:39:03.091008Z"
+    }
    },
    "outputs": [
     {
@@ -593,7 +707,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:03.092533Z",
+     "iopub.status.busy": "2025-02-19T02:39:03.092457Z",
+     "iopub.status.idle": "2025-02-19T02:39:03.094802Z",
+     "shell.execute_reply": "2025-02-19T02:39:03.094558Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -611,7 +731,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:03.095936Z",
+     "iopub.status.busy": "2025-02-19T02:39:03.095869Z",
+     "iopub.status.idle": "2025-02-19T02:39:03.097784Z",
+     "shell.execute_reply": "2025-02-19T02:39:03.097581Z"
+    }
    },
    "outputs": [
     {
@@ -640,7 +766,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2025-02-19T02:39:03.098873Z",
+     "iopub.status.busy": "2025-02-19T02:39:03.098805Z",
+     "iopub.status.idle": "2025-02-19T02:39:04.886515Z",
+     "shell.execute_reply": "2025-02-19T02:39:04.886218Z"
+    }
    },
    "outputs": [
     {
